syntax = "proto3";

package securityscanpb;

option go_package = "github.com/unarya/unarya/lib/proto/pb/security_scanpb";

// --- Security Scan Service ---
// Performs SAST, secret detection, and configuration vulnerability analysis
service SecurityScanService {
  // Perform static analysis, secret detection, and config scanning
  rpc ScanForVulnerabilities(ScanRequest) returns (ScanResponse);
}

// --- Messages ---

message ScanRequest {
  string source_path = 1;
}

message ScanResponse {
  string report = 1;     // Full JSON report generated by scanner
  int32 total_finds = 2; // Total number of issues found
}
